[gd_scene load_steps=19 format=3 uid="uid://csq0r4i000xch"]

[ext_resource type="Script" uid="uid://73b06xqrccq1" path="res://src/world/world.gd" id="1_3klmo"]
[ext_resource type="Script" uid="uid://33gkwf8c0l03" path="res://src/world/debug.gd" id="2_s04er"]
[ext_resource type="AudioStream" uid="uid://cxs3ff6jewjin" path="res://assets/audio/Floor_Intro.mp3" id="3_7xrbd"]
[ext_resource type="PackedScene" uid="uid://dnko3gmvxic7q" path="res://src/character/enemy/type/blue.tscn" id="4_2xdc0"]
[ext_resource type="PackedScene" uid="uid://ksdjb1tbboha" path="res://src/character/player/player.tscn" id="5_45di6"]
[ext_resource type="Script" uid="uid://dq178axjpqm7w" path="res://src/world/enemy_spawner.gd" id="5_q0b4x"]
[ext_resource type="PackedScene" uid="uid://cefe5cykhb2an" path="res://src/character/enemy/type/yellow.tscn" id="5_q1qhn"]
[ext_resource type="PackedScene" uid="uid://w3xuec13fpgc" path="res://src/character/enemy/type/green.tscn" id="6_vcgl2"]
[ext_resource type="PackedScene" uid="uid://b5qtj00q0awjg" path="res://src/character/enemy/type/red.tscn" id="7_obe8y"]
[ext_resource type="PackedScene" uid="uid://c6hat4xli5ja1" path="res://src/character/enemy/type/black.tscn" id="8_vgjmd"]
[ext_resource type="Texture2D" uid="uid://u56fn0gs47h0" path="res://assets/Floor1.png" id="9_pxxcl"]
[ext_resource type="PackedScene" uid="uid://mblwsep6ogyj" path="res://src/world/interface/interface.tscn" id="10_xb44s"]
[ext_resource type="Texture2D" uid="uid://cbveomv0sowod" path="res://src/icon.svg" id="11_q0wkl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_knbie"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_fwevs"]
sky_material = SubResource("ProceduralSkyMaterial_knbie")

[sub_resource type="Environment" id="Environment_cnr5b"]
background_mode = 3
sky = SubResource("Sky_fwevs")
ambient_light_source = 3
tonemap_mode = 2
glow_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4duf"]
size = Vector2(64, 4096)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5r1p"]
size = Vector2(64, 4096)

[node name="World" type="Node" node_paths=PackedStringArray("player")]
script = ExtResource("1_3klmo")
background_scroll = 3.7
player = NodePath("Player")

[node name="Debug" type="Node" parent="." node_paths=PackedStringArray("world")]
process_mode = 3
script = ExtResource("2_s04er")
world = NodePath("..")

[node name="EnemySpawner" type="Node" parent="." node_paths=PackedStringArray("world")]
unique_name_in_owner = true
script = ExtResource("5_q0b4x")
world = NodePath("..")
types = Array[PackedScene]([ExtResource("4_2xdc0"), ExtResource("5_q1qhn"), ExtResource("6_vcgl2"), ExtResource("7_obe8y"), ExtResource("8_vgjmd")])

[node name="Timer" type="Timer" parent="EnemySpawner"]
one_shot = true
autostart = true

[node name="Interface" parent="." node_paths=PackedStringArray("world") instance=ExtResource("10_xb44s")]
world = NodePath("..")

[node name="Sounds" type="Node" parent="."]

[node name="FloorIntro" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_7xrbd")
autoplay = true

[node name="PointTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 100.0
one_shot = true
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cnr5b")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 3, 0)
shadow_enabled = true

[node name="Background" type="Parallax2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Background"]
scale = Vector2(1.161, 1.161)
texture = ExtResource("9_pxxcl")
centered = false

[node name="Player" parent="." node_paths=PackedStringArray("world") instance=ExtResource("5_45di6")]
position = Vector2(200, 0)
world = NodePath("..")

[node name="NextLevel" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(2000, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevel"]
shape = SubResource("RectangleShape2D_s4duf")

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(-64, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_w5r1p")

[node name="Sprite2D" type="Sprite2D" parent="LeftWall"]
visible = false
texture_repeat = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_q0wkl")
region_enabled = true
region_rect = Rect2(0, 0, 128, 16384)

[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_timer_timeout"]
[connection signal="body_entered" from="NextLevel" to="." method="_on_next_level_body_entered"]
